RESOLVED FIXED276391
REGRESSION(280537@main): Memory leak in `variationAxes()`
https://bugs.webkit.org/show_bug.cgi?id=276391
Summary REGRESSION(280537@main): Memory leak in `variationAxes()`
Charlie Wolfe
Reported 2024-07-09 14:48:34 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-09 14:48:48 PDT
Charlie Wolfe
Comment 2 2024-07-09 14:49:46 PDT
EWS
Comment 3 2024-07-09 18:03:47 PDT
Committed 280800@main (bff583f365f7): <https://commits.webkit.org/280800@main> Reviewed commits have been landed. Closing PR #30621 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.