REGRESSION(280537@main): Memory leak in `variationAxes()` https://bugs.webkit.org/show_bug.cgi?id=276391 rdar://131414216

Reviewed by Aditya Keerthi.

`CTFontCopyFontDescriptor()` returns an object with a +1 retain count.

* Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::variationAxes):

Canonical link: https://commits.webkit.org/280800@main